[package]
name = "rust_wasm_template"
version = "0.1.0"
authors = ["alexanderbira <mail@alexbr.dev>"]
description = "A lightweight template for quickly making websites with integrated Rust WASM"
repository = "https://github.com/alexanderbira/rust_wasm_template.git"
license = "MIT/Apache-2.0"
readme = "README.md"
categories = ["wasm"]
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2"